--- a/Tournois/pom.xml
+++ b/Tournois/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.centrale</groupId>
-    <artifactId>WALID_SAIFI_S3_B1_Gestion-des-tournois_de_jeux_video</artifactId>
+    <groupId>Tournois</groupId>
+    <artifactId>playarena</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
@@ -15,9 +15,6 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <junit.version>5.9.0</junit.version>
     </properties>
-
-
-
 
     <dependencies>
         <dependency>
@@ -59,6 +56,12 @@
             <artifactId>slf4j-api</artifactId>
             <version>2.0.12</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.32</version>
+            <scope>runtime</scope>
+        </dependency>
 
         <!-- Logback Classic -->
         <dependency>
@@ -73,7 +76,6 @@
             <artifactId>logback-core</artifactId>
             <version>1.3.3</version>
         </dependency>
-
 
         <!-- Spring Framework -->
         <dependency>
@@ -107,6 +109,7 @@
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <version>1.4.200</version>
+            <scope>runtime</scope>
         </dependency>
 
         <!-- Mockito for testing -->
@@ -124,9 +127,6 @@
             <version>0.8.12</version>
         </dependency>
     </dependencies>
-
-
-
 
     <build>
         <plugins>
@@ -162,6 +162,14 @@
                 </configuration>
             </plugin>
 
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.0.0</version>
+                <configuration>
+                    <mainClass>App</mainClass>
+                </configuration>
+            </plugin>
 
         </plugins>
     </build>
