--- a/Tournois/pom.xml
+++ b/Tournois/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>Tournois</groupId>
-    <artifactId>playarena</artifactId>
+    <groupId>org.centrale</groupId>
+    <artifactId>Walid_Tournois</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
@@ -56,12 +56,6 @@
             <artifactId>slf4j-api</artifactId>
             <version>2.0.12</version>
         </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
-            <version>1.7.32</version>
-            <scope>runtime</scope>
-        </dependency>
 
         <!-- Logback Classic -->
         <dependency>
@@ -108,8 +102,7 @@
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-            <version>1.4.200</version>
-            <scope>runtime</scope>
+            <version>2.2.224</version> <!-- Use the version you're working with -->
         </dependency>
 
         <!-- Mockito for testing -->
@@ -159,15 +152,6 @@
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
-                </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>3.0.0</version>
-                <configuration>
-                    <mainClass>App</mainClass>
                 </configuration>
             </plugin>
 
